@@ -43,7 +43,8 @@ i.e. it's usable from CMSimple_XH 1.2 on. Additionally it requires the
 jQuery4CMSimple plugin. This will be already installed in all versions of CMSimple_XH since 1.4.1.
 If you have an older version, it's best to download and install
 <a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
-jQuery4CMSimple</a> before proceeding.</p>
+jQuery4CMSimple</a> before proceeding. Furthermore Pagemanager_XH requires
+<a href="http://3-magi.net/?CMSimple_XH/Utf8_XH">Utf8_XH</a>.</p>
 <div class="toplink"><a href="#">back to top</a></div>
 
 <h2><a name="installation">Installation</a></h2>
