@@ -45,7 +45,8 @@ Dieses wird in allen CMSimple_XH-Versionen ab 1.4.1 bereits vorinstalliert sein.
 Haben Sie eine ältere Version, ist es am besten
 <a href="http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple">
 jQuery4CMSimple</a> herunter zu laden und zu installieren,
-bevor Sie fortfahren.</p>
+bevor Sie fortfahren. Des weiteren benötigt Pagemanager_XH das
+<a href="http://3-magi.net/?CMSimple_XH/Utf8_XH">Utf8_XH Plugin</a>.</p>
 <div class="toplink"><a href="#">zum Seitenanfang</a></div>
 
 <h2><a name="installation">Installation</a></h2>
